added some css styles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></p>
-    <p><a href="recipes/monte-cristo.html">Monte Cristo Sandwich</a></p>
-    <p><a href="recipes/buffalo-sticks.html">Buffalo Cheese Sticks</a></p>
+    <p class="cheese"><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></p>
+    <p class="monte"><a href="recipes/monte-cristo.html">Monte Cristo Sandwich</a></p>
+    <p class="buffalo"><a href="recipes/buffalo-sticks.html">Buffalo Cheese Sticks</a></p>
 </body>
 
 </html>
